# apps/api/openapi.json
@@ -1056,13 +1056,19 @@
             "title": "Default Validation Method",
             "type": "string"
           },
+          "force_auto_corpus": {
+            "default": false,
+            "title": "Force Auto Corpus",
+            "type": "boolean"
+          },
           "iterop": {
             "$ref": "#/components/schemas/IteropConfig"
           }
         },
         "required": [
           "default_validation_method",
-          "iterop"
+          "iterop",
+          "force_auto_corpus"
         ],
         "title": "HitlConfig",
         "type": "object"
